--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-bel>=0.7.0
+bel==0.7.4
 elasticsearch==6.0.0
+gevent==1.2.2
 python-arango==3.12.1
 falcon==1.3.0rc2
 falcon_auth==1.1.0
@@ -10,3 +11,6 @@ itsdangerous==0.24
 passlib==1.7.1
 json-logging-py==0.2
 layeredconfig==0.3.2
+rq==0.10.0
+# Needed for bel python module - added temporarily for quick docker push
+python-dateutil==2.6.1
