--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,6 +2,7 @@ Pygments==2.2.0
 Sphinx>=1.5.2
 bumpversion==0.5.3
 coverage==4.3.4
+jsonschema>=2.6.0
 pep8>=1.7.0
 pyflakes>=1.5.0
 pytest>=3.3.0
@@ -10,10 +11,11 @@ pytest-cov==2.4.0
 pytest-flakes==1.0.1
 pytest-mock==1.5.0
 pytest-pep8==1.0.6
+pytest-pythonpath==0.7.1
 pytest-sugar==0.8.0
 pytest-watch==4.1.0
 requests==2.13.0
 sphinx-autobuild==0.7.1
 sphinx-rtd-theme>=0.2.5b2
 sphinxcontrib-napoleon==0.6.1
-jsonschema>=2.6.0
+twine==1.9.1
