--- a/api/gunicorn.conf
+++ b/api/gunicorn.conf
@@ -1,7 +1,14 @@
 import os
+import multiprocessing
+import logging
+
+logger=logging.getLogger(__name__)
 
 if os.environ.get('SERVER_MODE') == 'DEV':
     reload = True
+
+worker_class = "gevent"
+workers = multiprocessing.cpu_count() * 2 + 1
 
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
@@ -18,3 +25,4 @@ for k, v in os.environ.items():
     if k.startswith("GUNICORN_"):
         key = k.split('_', 1)[1].lower()
         locals()[key] = v
+
