--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,11 @@
 [pytest]
+
 # Ignore E501=line too long, W391=end of file blank lines  E128 continuation line under-indented
-pep8ignore =
-    *.py E501 W391 E128
+pep8ignore = *.py E501 W391 E128
+
+python_paths = "../api"
+
+# Can add multiple files - see https://taverntesting.github.io/documentation#multiple-global-configuration-files
+tavern-global-cfg=
+    api/common.yaml
+
