--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.2.1
+current_version = 0.2.2
 commit = True
 tag = True
 
@@ -7,7 +7,7 @@ tag = True
 
 [bumpversion:file:./api/__version__.py]
 
-[bumpversion:file:./make_docs/belbio_api.yaml]
+[bumpversion:file:./docs/belbio_api.yaml]
 
-[bumpversion:file:./make_docs/sphinx/source/conf.py]
+[bumpversion:file:./sphinx/source/conf.py]
 
