--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ itsdangerous==0.24
 passlib==1.7.1
 json-logging-py==0.2
 layeredconfig==0.3.2
+python-dateutil==2.6.1
 rq==0.10.0
 structlog==18.1.0
+
